<resources>
    <string name="app_name">CampusRunners</string>

    <!-- Strings related to login -->
    <string name="prompt_email">User Name (abc123)</string>
    <!--<string name="register_button">Register Here</string>-->
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This user-name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_runner_home">Open Jobs</string>
    <string name="title_home">Home</string>
    <string name="title_orders">Orders</string>
    <string name="title_profile">Profile</string>
    <string name="title_cart">Cart</string>

    <string name= "create_abc123">User abc 123</string>
    <string name= "create_FirstName">First Name</string>
    <string name= "create_LastName">Last Name</string>
    <string name= "create_Email">Email</string>
    <string name= "create_Password">Password</string>
    <string name= "create_Phonenumber">Phone Number</string>
    <string name= "create_DOB">Date of Birth MM/DD/YEAR</string>
    <string name= "create_user_role">User Role, buyer or runner</string>
    <string name= "create_user_buyer_radio">Buyer Role</string>
    <string name= "create_user_runner_radio">Runner Role</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_accept_job">Accept Job</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_runner_orders">Orders</string>
    <string name="title_activity_runner_detail_accepted">Order Detail</string>
    <string name="title_activity_view_all_runner_orders">Orders</string>
    <string name="title_activity_rate_buyer">Rate the Buyer</string>
    <string name="title_activity_individual_completed_order">"Completed "</string>
    <string name="title_activity_rate_the_buyer">Rate Buyer</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_logon">Log On</string>
    <string name="title_signup">Sign Up</string>

    <string name="title_activity_create_user">CreateUser</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_UserRoleStr">Role</string>
    <string name="hint_password">Password</string>
    <string name="male">male</string>
    <string name="hint_dob">DOB(MM/DD/YYYY)</string>
    <string name="female">Female</string>
    <string name="btn_sign_up">Sign-Up</string>
    <string name="btn_link_login">Now Log In</string>
    <string name="title_activity_faq">FAQ</string>
    <string name="title_activity_map_uts">UTSA</string>
    <string name="title_activity_buyer_homes">Home</string>
    <string name="title_activity_business_views">Add to Cart</string>
    <string name="title_activity_buyer_place_order">Place Order</string>
    <string name="title_activity_buyer_order_placed">Order Details</string>
    <string name="title_activity_view_all_buyer_orders">Orders</string>
    <string name="title_activity_indvidual_completed_order_buyer">Completed Order</string>
    <string name="title_activity_faqbuyer">FAQ</string>
    <string name="title_activity_rate_the_runner">Rate The Runner</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_users">Create An Account</string>
    <!--<string name="dummy_button">Dummy Button</string>-->
    <!--<string name="dummy_content">DUMMY\nCONTENT</string>-->
</resources>
